# pyi18next

./: pyproject.toml
pyi18next/: __init__.py
