[tool.poetry]
name = "pyi18next"
version = "0.0.2"
readme = 'README.md'
description = "A Python implementation of i18next."
authors = ["Gongziting Tech Ltd."]
license = "MIT"
homepage = "https://github.com/gzttech/pyi18next"

[tool.poetry.dependencies]
python = "^3.7"
babel = "^2.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
